k8s/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: file-gen-backend-ingress
  namespace: sachs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
spec:
  tls:
  - hosts:
    - filegenerator.api.datexis.com
    secretName: filegenerator-sachs-ingress-tls
  rules:
  - host: filegenerator.api.datexis.com
    http:
      paths:
      - backend:
          serviceName: file-gen-backend-service
          servicePort: 5005
